# openAV-Ctlra

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  Tupfile  Tuprules.tup  ctlr_daemon.cpp  demo.c  meson.build  meson_options.txt  perf_test.cpp
ctlr/: Tupfile  ctlr.c  ctlr.h  device_impl.h  devices.h  event.h  usb.c
ctlr/devices/: Tupfile  device_impl.h  ni_kontrol_d2.c  ni_kontrol_d2.h  ni_kontrol_f1.c  ni_kontrol_f1.h  ni_kontrol_x1_mk2.c  ni_kontrol_x1_mk2.h  ni_kontrol_z1.c  ni_kontrol_z1.h  ni_maschine.c  ni_maschine.h  ni_maschine_mikro_mk2.c  simple.c
ctlra/: CMakeLists.txt  Doxyfile  Tupfile  config.h.in  ctlra.c  ctlra.h  ctlra_cairo.c  ctlra_cairo.h  ctlra_impl.h  device_impl.h  devices.h  event.c  event.h  impl.h  mappa.c  mappa.h  mappa_impl.h  mappa_z1.ini  meson.build  midi.c  midi.h  usb.c  usb.h
ctlra/devices/: 3dconnexion.c  README.md  Tupfile  akai_apc.c  avtka.c  firmata.c  meson.build  midi_generic.c  ni_kontrol_d2.c  ni_kontrol_d2.h  ni_kontrol_f1.c  ni_kontrol_f1.h  ni_kontrol_s2.c  ni_kontrol_s2.h  ni_kontrol_s2_mk2.c  ni_kontrol_s2_mk2.h  ni_kontrol_s4_mk1.c  ni_kontrol_s4_mk3.c  ni_kontrol_s5.c  ni_kontrol_s8.c  ni_kontrol_s8.h  ni_kontrol_x1_mk2.c  ni_kontrol_x1_mk2.h  ni_kontrol_z1.c  ni_kontrol_z1.h  ni_maschine_jam.c  ni_maschine_jam.h  ni_maschine_mikro_mk2.c  ni_maschine_mikro_mk2.h  ni_maschine_mikro_mk3.c  ni_maschine_mikro_mk3.h  ni_maschine_mk3.c  simple.c
ctlra_scripts/: README.md  ni_d2_script.c
examples/: CMakeLists.txt  meson.build
examples/avtka_ctlra/: avtka.c  meson.build  simple.c
examples/daemon/: Tupfile  daemon.c  daemon.cpp  meson.build
examples/daemonx/: README.md  daemonx.c  meson.build
examples/device_test/: device_test.c  meson.build
examples/loopa/: application_api.h  loopa.c  loopa.h  loopa_mk3.c  main.c  meson.build  oav_delay.h  oav_reverb.h
examples/mappa/: main.c  mappa.c  mappa.h  mappa_impl.h  mappa_z1.ini  meson.build
examples/ni_s4_mk3_display/: main.cpp  meson.build
examples/select_device/: main.c  meson.build
examples/sequencer/: meson.build  seq.c  seq.cpp  sequencer.c  sequencer.h
examples/simple/: Tupfile  loadbmp.h  meson.build  sera.c  sera.h  simple.c
examples/smpla/: audio.c  audio.h  audio_samples.c  audio_samples.h  dsp_forga.h  jack_standalone.c  loop.c  loop.h  meson.build  sampler.c  sequencer.c  smpla.c  smpla_lv2.c
examples/smpla/smpla.lv2/: manifest.ttl  smpla.ttl
examples/smpla/staticKit/: hat.hxx  kick.hxx
examples/smpla/zix/: ring.c
examples/tcc_script/: Tupfile  application_api.h  meson.build  tcc_script.c
examples/vegas_mode/: Tupfile  audio.c  d2.c  f1.c  global.h  jam.c  maschine3.c  mm_mk2.c  vegas_mode.c  x1.c  z1.c
examples/virt_dev/: meson.build  virt_dev.c
resources/udev_rules/: 80-native-instruments.rules
subprojects/: avtka.wrap  firmatac.wrap
