option('avtka', type : 'boolean', value : true, description : 'Use Avtka library for virtual controller support')
option('firmata', type : 'boolean', value : false, description : 'Use Firmatac library for serial devices')
option('midi', type : 'boolean', value : true, description : 'Enable MIDI (only ALSA implemented, so Linux')
option('examples', type: 'string', value: 'simple', description: 'Comma-separated list of examples to build')
