example_simple = files('simple/simple.c')
example_vegas = files('vegas_mode/vegas_mode.c',
                       'vegas_mode/d2.c',
                       'vegas_mode/audio.c',
                       'vegas_mode/jam.c',
                       'vegas_mode/mm_mk2.c',
                       'vegas_mode/x1.c',
                       'vegas_mode/z1.c',
                       'vegas_mode/f1.c')
