example_simple = files('simple/simple.c')
example_avtka = files('avtka_ctlra/simple.c')
example_dev_test = files('device_test/device_test.c')
example_daemon = files('daemon/daemon.c')
example_virt_dev = files('virt_dev/virt_dev.c')
example_loopa = files('loopa/loopa.c', 'loopa/main.c')
example_seq    = files('sequencer/seq.c', 'sequencer/sequencer.c')
example_vegas = files('vegas_mode/vegas_mode.c',
                       'vegas_mode/d2.c',
                       'vegas_mode/audio.c',
                       'vegas_mode/jam.c',
                       'vegas_mode/mm_mk2.c',
                       'vegas_mode/maschine3.c',
                       'vegas_mode/x1.c',
                       'vegas_mode/z1.c',
                       'vegas_mode/f1.c')
